Closes #2491: Add options for the feedback recipient

--- a/dataverse-webapp/src/main/webapp/403.xhtml
+++ b/dataverse-webapp/src/main/webapp/403.xhtml
@@ -18,7 +18,7 @@
                 <f:metadata>
                     <f:viewAction action="#{sendFeedbackDialog.initUserInput}">
                         <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                        <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                        <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                         <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                         <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                     </f:viewAction>
