--- a/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
@@ -242,7 +242,7 @@
                                             <o:form useRequestURI="true" class="navbar-form navbar-left navbar-form-link">
                                                 <p:commandLink oncomplete="primeFacesShowModal('contactForm', this)" update=":contactDialog" actionListener="#{sendFeedbackDialog.initUserInput}">
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                                     <h:outputText value="#{bundle['header.support']}"/>
