--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -66,7 +66,7 @@
                                                            actionListener="#{sendFeedbackDialog.initUserInput}">
                                                 <f:setPropertyActionListener
                                                         target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}"
+                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}"
                                                                              value="#{null}"/>
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}"
                                                                              value=""/>
@@ -272,7 +272,7 @@
                                                         <f:setPropertyActionListener
                                                                 target="#{sendFeedbackDialog.messageSubject}" value=""/>
                                                         <f:setPropertyActionListener
-                                                                target="#{sendFeedbackDialog.recipient}"
+                                                                target="#{sendFeedbackDialog.feedbackTarget}"
                                                                 value="#{null}"/>
                                                         <f:setPropertyActionListener
                                                                 target="#{sendFeedbackDialog.userMessage}" value=""/>
@@ -322,7 +322,7 @@
                                                         <f:setPropertyActionListener
                                                                 target="#{sendFeedbackDialog.messageSubject}" value=""/>
                                                         <f:setPropertyActionListener
-                                                                target="#{sendFeedbackDialog.recipient}"
+                                                                target="#{sendFeedbackDialog.feedbackTarget}"
                                                                 value="#{null}"/>
                                                         <f:setPropertyActionListener
                                                                 target="#{sendFeedbackDialog.userMessage}" value=""/>
