--- a/dataverse-webapp/src/main/webapp/dataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse.xhtml
@@ -70,7 +70,7 @@
                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
                                     <f:param name="DO_VALIDATION" value="false"/>
-                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}"
+                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}"
                                                                  value="#{DataversePage.dataverse}"/>
                                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"/> #{bundle['contact.contact']}
                                 </p:commandLink>
