--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -382,7 +382,7 @@
                                                            oncomplete="primeFacesShowModal('contactForm', this)" update=":contactDialog"
                                                            actionListener="#{sendFeedbackDialog.initUserInput}">
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                             </p:commandLink>
@@ -400,7 +400,7 @@
                                                            oncomplete="primeFacesShowModal('contactForm', this)" update=":contactDialog"
                                                            actionListener="#{sendFeedbackDialog.initUserInput}">
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                                                <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                                                 <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                             </p:commandLink>
