--- a/dataverse-webapp/src/main/webapp/loginpage.xhtml
+++ b/dataverse-webapp/src/main/webapp/loginpage.xhtml
@@ -120,7 +120,7 @@
                                                        oncomplete="primeFacesShowModal('contactForm', this)" update=":contactDialog"
                                                        actionListener="#{sendFeedbackDialog.initUserInput}">
                                             <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                            <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                                            <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                                             <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                                             <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                         </p:commandLink>
@@ -184,7 +184,7 @@
                                                                update=":contactDialog"
                                                                actionListener="#{sendFeedbackDialog.initUserInput}">
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.messageSubject}" value=""/>
-                                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.recipient}" value="#{null}"/>
+                                                    <f:setPropertyActionListener target="#{sendFeedbackDialog.feedbackTarget}" value="#{null}"/>
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.userMessage}" value=""/>
                                                     <f:setPropertyActionListener target="#{sendFeedbackDialog.userEmail}" value=""/>
                                                 </p:commandLink>
