Closes #2505: Allow to move multiple datasets at once

--- a/dataverse-webapp/src/main/webapp/dashboard-datamove.xhtml
+++ b/dataverse-webapp/src/main/webapp/dashboard-datamove.xhtml
@@ -57,11 +57,11 @@
                                                             required="true"
                                                             requiredMessage="#{bundle['requiredField']}"
                                                             placeholder="#{bundle['dashboard.datamove.dataset.placeholder']}"
-                                                            multiple="false" scrollHeight="180"
+                                                            multiple="true" unique="true" scrollHeight="180"
                                                             forceSelection="true"
                                                             minQueryLength="10" queryDelay="1000" size="36"
                                                             emptyMessage="#{bundle['dashboard.datamove.dataset.menu.invalidMsg']}"
-                                                            value="#{DashboardDatamovePage.sourceDataset}"
+                                                            value="#{DashboardDatamovePage.sourceDatasets}"
                                                             completeMethod="#{DashboardDatamovePage.completeSourceDataset}"
                                                             var="srcDS" styleClass="DropdownPopup"
                                                             panelStyleClass="DropdownPopupPanel"
@@ -199,7 +199,7 @@
                                                             forceSelection="true"
                                                             minQueryLength="2" queryDelay="1000" size="36"
                                                             emptyMessage="#{bundle['dashboard.datamove.dataverse.menu.invalidMsg']}"
-                                                            value="#{DashboardDatamovePage.source}"
+                                                            value="#{DashboardDatamovePage.sourceDataverse}"
                                                             completeMethod="#{DashboardDatamovePage.completeDataverse}"
                                                             var="srcDV" styleClass="DropdownPopup"
                                                             panelStyleClass="DropdownPopupPanel"
@@ -249,7 +249,7 @@
                                                             forceSelection="true"
                                                             minQueryLength="2" queryDelay="1000" size="36"
                                                             emptyMessage="#{bundle['dashboard.datamove.dataverse.menu.invalidMsg']}"
-                                                            value="#{DashboardDatamovePage.target}"
+                                                            value="#{DashboardDatamovePage.targetDataverse}"
                                                             completeMethod="#{DashboardDatamovePage.completeDataverse}"
                                                             var="targetDV" styleClass="DropdownPopup"
                                                             panelStyleClass="DropdownPopupPanel"
