Closes #2572: Created controlled vocabulary enhanced select input
Co-authored-by: Sylwester Niewczas <sniewcza@icm.edu.pl>
Co-authored-by: Krzysztof Mądry <k.madry@icm.edu.pl>
Co-authored-by: Filipe Dias Lewandowski

Signed-off-by: Daniel Korbel <dkorbel@icm.edu.pl>

--- a/dataverse-webapp/src/main/webapp/createDataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/createDataset.xhtml
@@ -136,14 +136,15 @@
                                      value="#{bundle['file.addBtn']}"
                                      action="#{CreateDatasetPage.save}"
                                      update="formContent"
-                                     oncomplete="$(document).scrollTop(0);"
+                                     onstart="PF('datasetFormBlockUI').show();"
+                                     oncomplete="$(document).scrollTop(0); PF('datasetFormBlockUI').hide();"
                                      />
                     <p:button id="cancelCreate" value="#{bundle.cancel}"
                               outcome="/dataverse.xhtml?alias=#{CreateDatasetPage.dataset.owner.alias}" />
                 </div>
                 <!-- END: Create/Save Dataset Button Panel -->
 
-                <p:blockUI block="datasetForm" trigger="save" />
+                <p:blockUI block="datasetForm" trigger="save" widgetVar="datasetFormBlockUI" />
             </h:form>
 
             <script type="text/javascript">
