--- a/dataverse-webapp/src/main/webapp/datasetFieldForEditFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/datasetFieldForEditFragment.xhtml
@@ -75,6 +75,17 @@
         </ui:include>
     </p:fragment>
 
+    <p:fragment rendered="#{inputRenderer.getType() eq inputRendererTypeEnum.VOCABULARY_ENHANCED_SELECT}">
+        <ui:include src="/WEB-INF/templates/dataset/inputRenderer/controlledVocabEnhancedInputField.xhtml">
+            <ui:param name="inputRenderer" value="#{inputRenderer}" />
+            <ui:param name="datasetField" value="#{datasetField}" />
+            <ui:param name="hiddenLabel" value="#{hiddenLabel}" />
+            <ui:param name="labelFieldNumber" value="#{labelFieldNumber}" />
+            <ui:param name="allBlockfields" value="#{allBlockfields}" />
+            <ui:param name="operation" value="#{operation}" />
+        </ui:include>
+    </p:fragment>
+
     <p:fragment rendered="#{inputRenderer.getType() eq inputRendererTypeEnum.HIDDEN_VOCABULARY}">
         <ui:include src="/WEB-INF/templates/dataset/inputRenderer/hiddenControlledVocabInputField.xhtml">
             <ui:param name="inputRenderer" value="#{inputRenderer}" />
